WEBSITE: https://r-ega.net

## Changes in version 2.2.1

+	FIX: default `itemStability` plot switched back to empirical dimensions only


## Changes in version 2.2.0

+	ADD: `network.nonconvex` to estimate networks using non-convex regularization penalties

+	ADD: `TEFI.compare` to perform a significance test between two structures using `bootEGA` output

+	FIX: Error in printing `length_error` for `color_palette_EGA`

+	FIX: signs for revised network loadings have reverted back to original method due to issues with eigenvectors when there are unusual patterns of (partial) correlations

+	UPDATE: `itemStability` plot now includes the full item stability matrix rather than empirical dimensions


## Changes in version 2.1.0

+	ADD: `EGM` and `simEGM` for model estimation and simulation of the Exploratory Graph Model, respectively

+	ADD: `EGM.compare` to compare EGM against EFA for most likely data generating mechanism

+	INTERNAL: `fit` function to calculate traditional, log-likelihood, and TEFI fit indices


## Changes in version 2.0.8

+ FIX: issue with dynamic memory allocation in `polychoric_matrix.c` during CRAN's install of the package

+ ADD: `cosine` similarity added as a default for `auto.correlate` and 'corr' arguments


## Changes in version 2.0.7

+ FIX: mixed data with missing data in `network.predictability`

+ ADD: `frobenius` norm to compare networks

+ ADD: `network.compare` function to test for differences in network structures using three different metrics (Frobenius Norm, Jensen-Shannon Similarity, total network strength)

+ ADD: a general function called `information` to compute several information theory measures

+ UPDATE: default 'loading.method' for `net.loads` has been changed to "revised" moving forward -- the previous default in versions <= 2.0.6 can be obtained using "original"

+ UPDATE: `invariance` handles more than 2 groups (plots up to 4 groups pairwise)
